@@ -296,11 +296,12 @@
     <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="evolution">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
   <module id="evolution-brainread">
     <branch id="HEAD"/>
@@ -309,18 +310,20 @@
     <branch id="HEAD"/>
   </module>
   <module id="evolution-data-server">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
   <module id="evolution-exchange">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
   <module id="evolution-jescs">
     <branch id="HEAD"/>
@@ -1157,11 +1160,12 @@
     <branch id="gtk-engines-2-12" stringfrozen="true"/>
   </module>
   <module id="gtkhtml">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
   <module id="gtksourceview">
     <branch id="HEAD" stringfrozen="true"/>
@@ -1590,7 +1594,8 @@
     <branch id="HEAD"/>
   </module>
   <module id="vinagre">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
   <module id="vino">
     <branch id="HEAD" stringfrozen="true"/>
