@@ -559,9 +559,9 @@
       <module id="eog" branch="gnome-2-22"/>
       <module id="epiphany" branch="gnome-2-22"/>
       <module id="evince"/>
-      <module id="evolution"/>
-      <module id="evolution-data-server"/>
-      <module id="evolution-exchange"/>
+      <module id="evolution" branch="gnome-2-22"/>
+      <module id="evolution-data-server" branch="gnome-2-22"/>
+      <module id="evolution-exchange" branch="gnome-2-22"/>
       <module id="evolution-webcal"/>
       <module id="fast-user-switch-applet"/>
       <module id="file-roller"/>
@@ -596,7 +596,7 @@
       <module id="gnome-volume-manager"/>
       <module id="gok"/>
       <module id="gtk-engines"/>
-      <module id="gtkhtml"/>
+      <module id="gtkhtml" branch="gnome-2-22"/>
       <module id="gtksourceview"/>
       <module id="gucharmap" branch="gnome-2-22"/>
       <module id="gvfs"/>
@@ -617,7 +617,7 @@
       <module id="tomboy"/>
       <module id="totem" branch="gnome-2-22"/>
       <module id="totem-pl-parser" branch="gnome-2-22"/>
-      <module id="vinagre"/>
+      <module id="vinagre" branch="gnome-2-22"/>
       <module id="vino"/>
       <module id="vte"/>
       <module id="yelp"/>
