@@ -1,6 +1,12 @@
 2008-03-10  Gil Forcada  <gforcada@gnome.org>
 
 	* gnome-modules.xml.in:
+	* releases.xml.in: vinagre, evolution, evolution-data-server,
+	evolution-exchange and gtkhtml branched for 2.22.
+
+2008-03-10  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
 	* releases.xml.in: totem-pl-parser, zenity and eog branched for 2.22.
 
 2008-03-06  Claude Paroz  <claude@2xlibre.net>
